🐛 Fix plDashboard display on mobile devices

--- a/kmfrontend/src/frontend/components/karas/Playlist.scss
+++ b/kmfrontend/src/frontend/components/karas/Playlist.scss
@@ -16,9 +16,6 @@
 		.panel {
 			height: 100%;
 		}
-		.plDashboard .plSearch {
-			flex-basis : 30%;
-		}
 		#panel2 {
 			display: none;
 		}
