--- a/kmfrontend/src/frontend/components/karas/PlaylistHeader.scss
+++ b/kmfrontend/src/frontend/components/karas/PlaylistHeader.scss
@@ -59,7 +59,7 @@
 	.filterElementActive {
 		background-color:#416081;
 		font-weight: bold;
-}
+	}
 
 	@media (max-width: $mugen-breakpoint-smaller) {
 		flex-wrap: wrap;
@@ -128,6 +128,25 @@
 
 	.actionDiv {
 		display: flex;
+	}
+
+	@media screen and (max-width: $mugen-breakpoint-smaller) {
+		.btn-group {
+			display: flex;
+			button {
+				height: 2em;
+			}
+			.fas.fa-fw.fa-filter {
+				width: unset;
+			}
+		}
+		.plSearch {
+			order: 2;
+			height: 2em;
+			flex-basis: 100%;
+			flex-shrink: 0;
+			margin: 1em 0 0;
+		}
 	}
 }
 
